Dump more information in navigation_start event

Today for metric calculations, we determine the URL of a
navigation_start event by finding a FrameLoader snapshot that precedes
it. However, we're seeing cases where we don't have a snapshot of the
FrameLoader with the new URL before the nav start event. This CL embeds
two essential piece of information for metric computation in the
navigationStart trace event itself so we don't have to look for
FrameLoader snapshots for them.

Bug: 824761
Change-Id: I41ee17a58810a0d7b1fb918ceff215454d11c157
Reviewed-on: https://chromium-review.googlesource.com/975986
Reviewed-by: Nate Chapin <japhet@chromium.org>
Commit-Queue: Deepanjan Roy <dproy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545421}